# bbg_emsx_simulator

./: .gitignore  FIX42_BBG.xml  LICENSE  README.md  client.cfg  client_application.py  fix_application.py  fix_client.py  fix_server.py  models.py  oms_orders.csv  order_manager.py  prompt  pyproject.toml  queue_example.py  run.sh  server.cfg  server_application.py  settings.py  streamlit_app.py  test_scenario.txt
.gpteng/memory/: all_output.txt  gen_entrypoint_chat.txt
bbg_emsx_simulator/: client_application.py  fix_application.py  fix_client.py  models.py  order_manager.py  panel_webapp.py  scenario.py  server_application.py  streamlit_app.py
store/: FIX.4.2-FIXCLIENT-FIXSERVER.body  FIX.4.2-FIXCLIENT-FIXSERVER.header  FIX.4.2-FIXCLIENT-FIXSERVER.seqnums  FIX.4.2-FIXCLIENT-FIXSERVER.session  FIX.4.2-FIXSERVER-FIXCLIENT.body  FIX.4.2-FIXSERVER-FIXCLIENT.header  FIX.4.2-FIXSERVER-FIXCLIENT.seqnums
