[tool.poetry]
name = "bbg_emsx_simulator"
version = "0.1.0"
description = "A FIX server and client simulator for Bloomberg IOI Network Indications of Interest & Trade Advertisement Fix Specification."
authors = ["Jerome Provensal <jeromegit@provensal.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quickfix = "^1.15.1"
pandas = "^2.1"
streamlit = "^1.29.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"